--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-# Z-Image-Turbo Inference Requirements
+# Multi-Model Image Generation Benchmark Requirements
+# Supports Z-Image-Turbo, SD-Turbo, SD 1.5, and STARFlow
 
 # Core Dependencies
 # Install diffusers from source for Z-Image support
@@ -13,6 +14,12 @@ transformers>=4.30.0
 accelerate>=0.20.0
 safetensors>=0.3.0
 
+# Hugging Face Hub (for model downloads)
+huggingface_hub>=0.16.0
+
+# Configuration and Data
+pyyaml>=6.0
+
 # Performance Monitoring
 psutil>=5.9.0
 
@@ -23,3 +30,5 @@ psutil>=5.9.0
 # Image Processing
 Pillow>=9.0.0
 
+# Note: For STARFlow support, additional dependencies may be required
+# See STARFLOW_README.md for detailed setup instructions
