Refactor benchmarking setup: remove benchmark_results.json, add new benchmarking utilities in utils/benchmark.py, and update .gitignore to exclude benchmark outputs.

--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,13 @@ ENV/
 
 # Output files
 outputs/
-benchmark_results.json
-assets
+benchmarks/
+*.benchmark.json
+assets/
 
 # Model cache
 .cache/
 huggingface/
-utils
 
 # IDE
 .vscode/
